--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Discord Tool</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self' https://discord.com">
     <link rel="stylesheet" href="src/styles/base.css">
     <link rel="stylesheet" href="src/screens/styles/AuthScreen.css">
 </head>
