--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Discord Tool</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self' https://discord.com">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self' https://discord.com; img-src 'self' https://*.discord.com https://cdn.discord.com https://cdn.discordapp.com">
     <link rel="stylesheet" href="src/styles/base.css">
     <link rel="stylesheet" href="src/screens/styles/Screens.css">
+    <link rel="stylesheet" href="src/components/styles/Navigation.css">
 </head>
 <body>
     <div id="app">
