--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Discord Tool</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self' https://discord.com; img-src 'self' https://*.discord.com https://cdn.discord.com https://cdn.discordapp.com">
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval'; img-src * 'self' data: blob:; script-src * 'self' 'unsafe-inline' 'unsafe-eval'; connect-src * 'self' https: http: ws: wss:; media-src * 'self' data: blob:;">
     <link rel="stylesheet" href="src/styles/base.css">
     <link rel="stylesheet" href="src/screens/styles/Screens.css">
     <link rel="stylesheet" href="src/components/styles/Navigation.css">
