--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/styles/base.css">
     <link rel="stylesheet" href="src/screens/styles/Screens.css">
     <link rel="stylesheet" href="src/components/styles/Navigation.css">
+    <link rel="stylesheet" href="src/screens/styles/MediaViewer.css">
 </head>
 <body>
     <div id="app">
