--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="src/screens/styles/Screens.css">
     <link rel="stylesheet" href="src/components/styles/Navigation.css">
     <link rel="stylesheet" href="src/screens/styles/MediaViewer.css">
+    <style>
+        body {
+            background-color: #1e1e1e;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
     <div id="app">
